tests/pos/ExpPosTest.hs
module ExpPosTest where

test :: Floating a => a -> a
test x = exp x
