tests/neg/exponential1.hs
-- negative test for real exponentiation
module Foo where

ex5 :: Float -> Int -> Float
ex5 x y = x ^ y
